<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_detail_poster"
            android:layout_width="200dp"
            android:layout_height="250dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:adjustViewBounds="true"
            tools:ignore="ContentDescription"
            tools:src="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tv_detail_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="8dp"
            android:textColor="@color/blue"
            android:textSize="32sp"
            tools:text="@tools:sample/lorem" />

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/tbl_tv_release"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:text="@string/delimiter_table_value"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_detail_release_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="14sp"
                tools:text="@tools:sample/date/mmddyy" />
        </TableRow>

        <TextView
            android:id="@+id/tv_detail_sinopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            tools:text="@tools:sample/lorem/random" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>